Added Header and Nav bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <title>Hello world project</title>
 </head>
 <body>
-  
+  <h1>Hello world</h1>
+  <div>
+    <nav>
+      <ul>
+        <li>
+          <a href="#" class=".index">Home</a>
+        </li>
+        <li>
+          <a href="#" class=".index">About</a>
+        </li>
+        <li>
+          <a href="#" class=".index">Contact</a>
+        </li>
+        <li>
+          <a href="#" class=".index">F.A.Q</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </body>
 </html>
