--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
       </ul>
     </nav>
   </div>
+<!-- showcase 1 -->
+  <section>
+    <div class="showcase-1">
+      <h2>This is the showcase area</h2>
+    </div>
+  </section>
 </body>
 </html>
