Added two new links to the navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <li>
           <a href="#" class=".index">F.A.Q</a>
         </li>
+        <li>
+          <a href="#" class=".index">Gallery</a>
+        </li>
+        <li>
+          <a href="#" class=".index">Blogs</a>
+        </li>
       </ul>
     </nav>
   </div>
